syntax = "proto3";
import "message.proto";
package protocol;

enum Controller2BrokerKey
{
  CreadtPartition = 0;
  DeletePartition = 1;
};
message Controller2Broker{
    Controller2BrokerKey key = 1;
    Partition Partitions = 2;
}


